# qt-prac

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
src/: mainwindow.h  mainwindow.ui  qt-prac.pro
