cmake_minimum_required(VERSION 3.17)
project(qt-prac VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

if(CMAKE_VERSION VERSION_LESS "3.7.0")
    set(CMAKE_INCLUDE_CURRENT_DIR ON)
endif()

find_package(Qt5 COMPONENTS Widgets REQUIRED)

add_executable(${PROJECT_NAME}
        src/main.cpp
        src/mainwindow.h
        src/mainwindow.cpp
        src/mainwindow.ui
        )

target_link_libraries(${PROJECT_NAME} Qt5::Widgets)